--- a/src/components/Tickets/Tickets.module.scss
+++ b/src/components/Tickets/Tickets.module.scss
@@ -24,10 +24,15 @@
       color: #2196f3;
     }
 
+    &__price::after {
+      content: '₽';
+      display: inline-block;
+      font-weight: 400;
+    }
+
     &__icon {
       width: 110px;
       height: 36px;
-      background: url('../../assets/S7_Logo.svg') no-repeat 50% 50%;
     }
   }
 
@@ -62,4 +67,13 @@
       }
     }
   }
+}
+
+.warning {
+  max-width: 502px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  color: #2196f3;
 }
